# Persona_Gen

./: .gitignore  Dockerfile  main.py  prompt.py  pyproject.toml  requirements.txt  streamlit_app.py
Data/: Questions.json  output.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/PersonaResult/: ResultView.jsx
frontend/src/components/Quiz/: QuizView.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  OptionCard.jsx
frontend/src/data/: questions.js
